Note that the compressed principles aren't the full principles, and explain the "new APIs" principle better.

--- a/meetings/2023-09-tpac/tuesday-ac-meeting/slides.html
+++ b/meetings/2023-09-tpac/tuesday-ac-meeting/slides.html
@@ -131,7 +131,7 @@
   </section>
 
   <section class="slide">
-    <h2 title="These are not direct quotes of the principles from the document.">Principles</h2>
+    <h2 title="These are not direct quotes of the principles from the document.">Principles *</h2>
     <div class="columns">
       <ul>
         <li title="A user agent should help its user pick an identity to present to each site they visit.">
@@ -141,7 +141,7 @@
           Minimize data for user goals.
         </li>
         <li
-          title="When we add a new API to the web, we have some principles about how to think about the data they expose based on how they expose it, and the data that existing APIs expose.">
+          title="When we add a new API to the web, it needs to protect the data it exposes at least as well as existing APIs and not make bad uses easier.">
           New APIs can expose some data.
         </li>
         <li
@@ -188,6 +188,7 @@
         </li>
       </ul>
     </div>
+    <p class="note" style="text-align: right">* These highly compressed principles omit a lot of the document's nuance.</p>
   </section>
 
   <section class="slide final" id="end">
