Add Nick's and Dan's favorite sections.

--- a/meetings/2023-09-tpac/breakout/slides.html
+++ b/meetings/2023-09-tpac/breakout/slides.html
@@ -52,6 +52,14 @@
   </section>
 
   <section class="comment">
+    Dan's highlight
+   </section>
+
+   <section class="slide cover">
+    <h2>2.2 Data Minimization</h2>
+   </section>
+
+   <section class="comment">
     Jeffrey's highlight
   </section>
 
@@ -92,14 +100,11 @@ actors, and which the people understand as distinct from other contexts.  A cont
   </section>
 
   <section class="comment">
-   XXX's highlight
+   Nick's highlight
   </section>
 
-  <section class="slide">
-   <h2></h2>
-   <ul>
-    <li></li>
-   </ul>
+  <section class="slide cover">
+   <h2>2.9 Protecting web users from abusive behaviour</h2>
   </section>
 
   <section class="slide final" id="end">
