--- a/meetings/2023-09-tpac/breakout/slides.html
+++ b/meetings/2023-09-tpac/breakout/slides.html
@@ -66,6 +66,19 @@
   </section>
 
   <section class="comment">
+    Robin's highlight
+  </section>
+
+  <section class="slide">
+    <h2>1.3 User Agents</h2>
+    <ul>
+      <li>"<i>The user agent is expected to align fully with the person using it and to operate exclusively in that person's interest.</i>"</li>
+      <li>Duties of protection, discretion, honesty, and loyalty</li>
+      <li>Trustworthy user agents provide a <em>fiduciary framework</em> for privacy, which has a number of advantages over other approaches</li>
+    </ul>
+  </section>
+
+  <section class="comment">
    XXX's highlight
   </section>
 
