highlight from me

--- a/meetings/2023-09-tpac/breakout/slides.html
+++ b/meetings/2023-09-tpac/breakout/slides.html
@@ -79,6 +79,19 @@
   </section>
 
   <section class="comment">
+   Don's highlight
+  </section>
+
+  <section class="slide">
+   <h2>Common concepts: context</h2>
+   <ul>
+    <li><i><q>A context is a physical or digital environment in which people interact with other
+actors, and which the people understand as distinct from other contexts.  A context is not defined in terms of who owns or controls it.</q></i><li>
+	<li>Consider the person's actual understanding and expectations as the basis for how to handle information about them</li>
+   </ul>
+  </section>
+
+  <section class="comment">
    XXX's highlight
   </section>
 
