Sort and fix headlines.

--- a/meetings/2023-09-tpac/breakout/slides.html
+++ b/meetings/2023-09-tpac/breakout/slides.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
 <html lang="en-us">
- <head>
+
+<head>
   <meta charset=UTF-8>
   <meta content="width=device-width" name="viewport">
   <title>Privacy Principles</title>
@@ -11,8 +12,9 @@
   <!-- To use the Shower framework, remove b6plus above and add these two: -->
   <!--   <script src="https://www.w3.org/2023/Talks/TPAC/Templates/shower.js"></script>         -->
   <!--   <script src="https://www.w3.org/2023/Talks/TPAC/Templates/iframe-fixup.js"></script>   -->
- </head>
- <body class="shower duration=15">
+</head>
+
+<body class="shower duration=15">
 
   <!--=============================================================
 			    Example slides
@@ -31,46 +33,23 @@
   <!-- <div class=fullclock></div> -->
 
   <section class="slide cover clear" id="start">
-   <h1>Privacy Principles</h1>
-   <!--<address>**Author**</address>-->
-   <p>★ W3C TPAC 2023, Seville, 11–15 September ★</p>
+    <h1>Privacy Principles</h1>
+    <!--<address>**Author**</address>-->
+    <p>★ W3C TPAC 2023, Seville, 11–15 September ★</p>
   </section>
 
   <section class="slide">
-   <h2>What?</h2>
-   <ul>
-    <li><a href="https://w3ctag.github.io/privacy-principles/"
-      >https://w3ctag.github.io/privacy-principles/</a></li>
-    <li>Joint effort between the TAG and PING</li>
-    <li>Appointed 12-member task force</li>
-    <li>Document in wide review</li>
-   </ul>
+    <h2>What?</h2>
+    <ul>
+      <li><a href="https://w3ctag.github.io/privacy-principles/">https://w3ctag.github.io/privacy-principles/</a></li>
+      <li>Joint effort between the TAG and PING</li>
+      <li>Appointed 12-member task force</li>
+      <li>Document in wide review</li>
+    </ul>
   </section>
 
   <section class="slide cover">
-   <h2>These are a few of our favorite things</h2>
-  </section>
-
-  <section class="comment">
-    Dan's highlight
-   </section>
-
-   <section class="slide cover">
-    <h2>2.2 Data Minimization</h2>
-   </section>
-
-   <section class="comment">
-    Jeffrey's highlight
-  </section>
-
-  <section class="slide">
-   <h2>2.8 Device Owners and Administrators</h2>
-   <ul>
-    <li>Devices are owned by people other than their users</li>
-    <li>UAs have to balance these interests</li>
-    <li>Owners can ensure <strong>reasonable</strong> restrictions on use</li>
-    <li>Users must know about data disclosure</li>
-   </ul>
+    <h2>These are a few of our favorite things</h2>
   </section>
 
   <section class="comment">
@@ -80,36 +59,64 @@
   <section class="slide">
     <h2>1.3 User Agents</h2>
     <ul>
-      <li>"<i>The user agent is expected to align fully with the person using it and to operate exclusively in that person's interest.</i>"</li>
+      <li>"<i>The user agent is expected to align fully with the person using it and to operate exclusively in that
+          person's interest.</i>"</li>
       <li>Duties of protection, discretion, honesty, and loyalty</li>
-      <li>Trustworthy user agents provide a <em>fiduciary framework</em> for privacy, which has a number of advantages over other approaches</li>
+      <li>Trustworthy user agents provide a <em>fiduciary framework</em> for privacy, which has a number of advantages
+        over other approaches</li>
     </ul>
   </section>
 
   <section class="comment">
-   Don's highlight
+    Dan's highlight
   </section>
 
   <section class="slide">
-   <h2>Common concepts: context</h2>
-   <ul>
-    <li><i><q>A context is a physical or digital environment in which people interact with other
-actors, and which the people understand as distinct from other contexts.  A context is not defined in terms of who owns or controls it.</q></i><li>
-	<li>Consider the person's actual understanding and expectations as the basis for how to handle information about them</li>
-   </ul>
+    <h2>2.2 Data Minimization</h2>
   </section>
 
   <section class="comment">
-   Nick's highlight
+    Jeffrey's highlight
   </section>
 
-  <section class="slide cover">
-   <h2>2.9 Protecting web users from abusive behaviour</h2>
+  <section class="slide">
+    <h2>2.8 Device Owners and Administrators</h2>
+    <ul>
+      <li>Devices are owned by people other than their users</li>
+      <li>UAs have to balance these interests</li>
+      <li>Owners can ensure <strong>reasonable</strong> restrictions on use</li>
+      <li>Users must know about data disclosure</li>
+    </ul>
+  </section>
+
+  <section class="comment">
+    Nick's highlight
+  </section>
+
+  <section class="slide">
+    <h2>2.9 Protecting web users from abusive behaviour</h2>
+  </section>
+
+  <section class="comment">
+    Don's highlight
+  </section>
+
+  <section class="slide">
+    <h2>A.2: Common concepts: Contexts</h2>
+    <ul>
+      <li><i><q>A context is a physical or digital environment in which people interact with other
+            actors, and which the people understand as distinct from other contexts. A context is not defined in terms
+            of who owns or controls it.</q></i>
+      <li>
+      <li>Consider the person's actual understanding and expectations as the basis for how to handle information about
+        them</li>
+    </ul>
   </section>
 
   <section class="slide final" id="end">
-   <h2>Questions and Comments</h2>
-   <strong>What do you think?</strong>
+    <h2>Questions and Comments</h2>
+    <strong>What do you think?</strong>
   </section>
- </body>
+</body>
+
 </html>
