--- a/index.html
+++ b/index.html
@@ -1754,7 +1754,7 @@ agent=] needs to warn the child about how it's configured so that the child can 
 <div class="practice">
   <span class="practicelab" id="transparency-when-requested">
     When accessing data or requesting permission, [=sites=] (and other [=actors=]) should provide
-    [=people=] with relevant information about its use and [=user agents=] should help present and
+    [=people=] with relevant information about its use, and [=user agents=] should help present and
     consume that information.
   </span>
 </div>
