clarifying and avoiding ambiguous terminology in reply to jyasskin

--- a/index.html
+++ b/index.html
@@ -1754,15 +1754,15 @@ agent=] needs to warn the child about how it's configured so that the child can 
 <div class="practice">
   <span class="practicelab" id="transparency-when-requested">
     When accessing data or requesting permission, [=sites=] (and other [=actors=]) should provide
-    [=people=] with relevant information about its use, and [=user agents=] should help present and
-    consume that information.
+    [=people=] with relevant explanatory information about the use of data, and [=user agents=]
+    should help present and consume that information.
   </span>
 </div>
 
-Transparency is a necessary, but insufficient, condition for [=consent=]. Relevant information
-includes who is accessing information, what information is accessed (including the potential
-inferences or combinations of such data) and how information is used. For transparency to be
-meaningful to people, information must be provided in the relevant [=context=].
+Transparency is a necessary, but insufficient, condition for [=consent=]. Relevant explanatory
+information includes who is accessing data, what data is accessed (including the potential
+inferences or combinations of such data) and how data is used. For transparency to be meaningful to
+people, explanatory information must be provided in the relevant [=context=].
 
 <div class="note">
   In designing new Web features that may involve permissions, consider whether a permission is
