Revert a readability fix to slightly improve the diff.

--- a/index.html
+++ b/index.html
@@ -1138,8 +1138,8 @@ should provide a way to disable APIs that expose [=ancillary data=].</span>
 [=Sites=] sometimes use data in ways that aren't needed for the user's immediate
 goals. For example, they might bill advertisers, measure site performance, or
 alert developers to bugs. These uses are known as <dfn data-lt="ancillary
-use">ancillary uses</dfn>. Data that is primarily useful for [=ancillary uses=]
-is <dfn>ancillary data</dfn>.
+use">ancillary uses</dfn>,
+and data that is primarily useful for [=ancillary uses=] is <dfn>ancillary data</dfn>.
 
 Some data that is exposed for non-[=ancillary uses=] can also be used for
 [=ancillary uses=]. In these cases, the data is not considered [=ancillary
