Use #transparency for the main section instead of the section on research.

--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@ upload might be more open to disclosing their social networks than the people th
 are. Such issues do not necessarily admit simple, straightforward solutions but they need to be
 carefully considered by people building websites.
 
-### Transparency and Research {#transparency}
+### Transparency and Research {#transparency-for-research}
 
 While transparency rarely helps enough to inform the individual choices that [=people=] may
 make, it plays a critical role in letting researchers and reporters inform our
@@ -1749,7 +1749,7 @@ agent=] needs to warn the child about how it's configured so that the child can 
 
 </aside>
 
-## Transparency
+## Transparency {#transparency}
 
 <div class="practice">
   <span class="practicelab" id="transparency-when-requested">
