De-duplicate an id.

--- a/index.html
+++ b/index.html
@@ -1276,10 +1276,10 @@ We do have consensus that [[[#information]]] governs [=summarizing ancillary
 APIs=] and that:
 
 <div class="practice" data-audiences="api-designers">
-<span class="practicelab"
-id="principle-limited-collection-for-safety">Specifications for [=summarizing
-ancillary APIs=] and [=novel ancillary APIs=] should identify them as such, so
-that [=user agents=] can provide appropriate choices for their users.</span>
+<span class="practicelab" id="principle-identify-ancillary-apis">Specifications
+for [=summarizing ancillary APIs=] and [=novel ancillary APIs=] should identify
+them as such, so that [=user agents=] can provide appropriate choices for their
+users.</span>
 </div>
 
 #### Designing novel ancillary APIs {#designing-novel-ancillary-apis}
