--- a/index.html
+++ b/index.html
@@ -1234,8 +1234,8 @@ use">ancillary uses</dfn>.
 
   <dt><dfn>Summarizing ancillary APIs</dfn></dt>
   <dd>
-    APIs that filter or summarize information available from [=non-ancillary
-    APIs=], like the [[[event-timing]]] and <a
+    APIs that filter, summarize, or time-shift information available from
+    [=non-ancillary APIs=], like the [[[event-timing]]] and <a
     data-cite="intersection-observer#introduction">IntersectionObserver</a>.
   </dd>
 
