Take Pete's suggestions

--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@ audience(s) for the technology, who the technology benefits and who it may disad
 and any power dynamics involved" ([[Ethical-Web]]). Despite this complexity, there is a basic ground
 rule to follow:
 
-<div class="practice" data-audiences="websites">
+<div class="practice" data-audiences="websites user-agents">
 
 <p><span class="practicelab" id="principle-limited-collection-for-safety">If a service
 needs to collect extra data from its users in order to protect those or other users, it
@@ -1214,7 +1214,7 @@ to their users.
 
 ## Information access {#information}
 
-<div class="practice" data-audiences="api-designers">
+<div class="practice" data-audiences="api-designers user-agents">
   <span class="practicelab">New Web APIs must guard users' information at least
   as well as existing APIs that are expected to stay in the web platform.</span>
 </div>
