Add audiences to transparency principles.

--- a/index.html
+++ b/index.html
@@ -1773,7 +1773,7 @@ agent=] needs to warn the child about how it's configured so that the child can 
 
 ## Transparency {#transparency}
 
-<div class="practice">
+<div class="practice" data-audiences="websites user-agents">
   <span class="practicelab" id="transparency-when-requested">
     When accessing data or requesting permission, [=sites=] (and other [=actors=]) should provide
     [=people=] with relevant explanatory information about the use of data, and [=user agents=]
@@ -1801,7 +1801,7 @@ people, explanatory information must be provided in the relevant [=context=].
   </ul>
 </div>
 
-<div class="practice">
+<div class="practice" data-audiences="websites api-designers">
   <span class="practicelab" id="transparency-plain-language-machine-readable">
     Information about privacy-relevant practices should be provided in both easily accessible plain
     language form and in machine-readable form.
@@ -1820,7 +1820,7 @@ Easily accessible, plain language presentation of privacy-relevant practices is 
 [=Sites=], [=user agents=], and other [=actors=] all may need to present privacy-relevant practices
 to [=people=] in accessible forms.
 
-<div class="practice">
+<div class="practice" data-audiences="websites api-designers">
   <span class="practicelab" id="transparency-distinguishable">
     Mechanisms that can be used for [=recognize|recognizing=] [=people=] should be designed so that
     their operation is visible and distinguishable, to [=user agents=], researchers and regulators.
