Add API designers to the data rights principle's audiences, per #362.

--- a/index.html
+++ b/index.html
@@ -1366,7 +1366,7 @@ a person, consider at least these factors:
 
 ## Data Rights {#data-rights}
 
-<div class="practice" data-audiences="websites user-agents">
+<div class="practice" data-audiences="websites user-agents api-designers">
   <span class="practicelab" id="respect-data-rights">
     [=People=] have certain rights over [=data=] that is about themselves, and these rights should
     be facilitated by their [=user agent=] and the [=actors=] that are [=processing=] their
