Don't say collective decision-making is strictly superior to engagement with individuals.

--- a/index.html
+++ b/index.html
@@ -1494,8 +1494,8 @@ Note that [=controlled de-identified data=], on its own, is not sufficient to ma
 
 <p>
   <span class="practicelab" id="principle-collective-privacy">
-    Groups and various forms of institutions should best protect and support autonomy by making
-    decisions collectively rather than individually to either prevent or enable data
+    Groups and institutions should support autonomy by making
+    decisions collectively to either prevent or enable data
     sharing, and to set defaults for data processing rules.
   </span>
 </p>
